QR for studentMarksheet from db

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,6 +24,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="QRCode" asp-action="CreateQRCode">QRCode</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="QRCodedb" asp-action="CreateQRCode">QRCode database</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="QRStudentMarksheetDb" asp-action="GenerateStudentQRCode">Student Marksheet QRCode database</a>
+                        </li>
                     </ul>
                 </div>
             </div>
