--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,6 +21,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+ <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="QRCode" asp-action="Index">CreateQRCode_GMAPLocation_Website_WIFI_Email_MobileSMS_Whatsapp</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="QRCode" asp-action="CreateQRCode">QRCode</a>
                         </li>
